[project]
name = "projekt-listedinc"
version = "0.1.0"
description = "Ingest och strukturering av börsbolagsdata från bolagens webbplatser."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "trafilatura>=1.9",
  "beautifulsoup4>=4.12",
  "lxml>=5.3",
  "pdfplumber>=0.11",
  "chardet>=5.2",
  "python-dotenv>=1.0",
  "pillow>=10.3",
  "pandas>=2.2",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "black>=24.4",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
